# nicMSlesions

./: .gitignore  .theanorc  Dockerfile  LICENSE  README.md  app.py  cnn_scripts.py  nicMSlesion_linux  nicMSlesion_win.bat  nicMSlesions_docker.sh  nic_infer_segmentation_batch.py  nic_train_network_batch.py  nic_train_network_batch_docker.sh  nic_train_network_leave_one_out.py  requirements.txt
config/: configuration.cfg  default.cfg
libs/CNN/: base.py  build_model.py  build_model_nolearn.py  nets.py
libs/CNN/defaults/baseline/nets/: model_1.pkl  model_1_history.pkl  model_2.pkl  model_2_history.pkl
libs/linux/ROBEX/: CMakeLists.txt  RobustStrip.cxx  RobustStrip.h  aux_methods.cxx  aux_methods.h  license.txt  loadModel.cpp  loadModel.h  maxflow_main.cpp  readme.txt  runROBEX.sh  swaps.h
libs/linux/niftyreg/: reg_aladin  reg_f3d  reg_resample  reg_transform
libs/win/ROBEX/: readme.txt  runROBEX.bat
nets/VH_FLAIR2D/nets/: model_1.pkl  model_1_history.pkl  model_2.pkl  model_2_history.pkl
nets/VH_MARATO/nets/: model_1.pkl  model_1_history.pkl  model_2.pkl  model_2_history.pkl
nets/baseline_2ch/nets/: model_1.hdf5  model_2.hdf5
nets/siemens_3T_2chan/nets/: model_1.hdf5  model_2.hdf5
nets/siemens_3T_4chan/nets/: model_1.hdf5  model_2.hdf5
utils/: load_options.py  postprocess.py  preprocess.py
